--- a/deforisk-qgis-plugin/doc_suffix.tex
+++ b/deforisk-qgis-plugin/doc_suffix.tex
@@ -13,7 +13,7 @@
     \begin{block}{}
       \begin{center}
         \ldots~Thank you for attention~\ldots \\
-        \url{https://ecology.ghislainv.fr/deforisk-qgis-plugin} \\
+        \url{https://deforisk-qgis-plugin.org} \\
         \textbf{> Articles > References > Presentations} \\
         \includegraphics[width=0.8\textwidth]{figs/partners_logos}
       \end{center}
